<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividad_tres.ui.AddAnimalFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_animal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:textSize="25sp"
           />

        <EditText
            android:id="@+id/name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:hint="@string/name"/>
        <EditText
            android:id="@+id/description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:hint="@string/description"/>
        <EditText
            android:id="@+id/urlImage"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:layout_gravity="center_horizontal"
            android:inputType="textUri"
            android:hint="@string/url_image"/>
        <CheckBox
            android:id="@+id/animalSickness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasSickness"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:checked="false"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgSexo"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <RadioButton
                android:id="@+id/mas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/macho"/>
            <RadioButton
                android:id="@+id/fem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hembra"/>
            <RadioButton
                android:id="@+id/sn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sin_asignar"/>
        </RadioGroup>
        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_animal"/>
    </LinearLayout>


</FrameLayout>