<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layouts.RelativeActivity">
    <TextView
        android:id="@+id/title"
        android:text="@string/relativeTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etName"
        android:hint="@string/phName"
        android:layout_below="@id/title"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnSend"
        android:text="@string/btnSend"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/etName"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <ImageButton
        android:id="@+id/iBtnLogo"
        android:contentDescription="@string/relativeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/ic_launcher" />

    <CheckBox
        android:id="@+id/cbCreditCard"
        android:text="@string/checkText"
        android:layout_below="@+id/iBtnLogo"
        android:layout_centerHorizontal="true"
        android:checked="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <RadioGroup
        android:id="@+id/rgGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnSend"
        android:layout_marginTop="20dp">
        <RadioButton
            android:id="@+id/rbMas"
            android:text="@string/masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rbFem"
            android:text="@string/femenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_below="@id/rgGenero"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

</RelativeLayout>