<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividad_tres.ui.AnimalDetailDosFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvAnimalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:textSize="25sp"
            tools:text="Animal Tag"/>
        <ImageView
            android:id="@+id/ivAnimal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            tools:src="@drawable/ic_img_placeholder"
            android:contentDescription="@string/img_not_found"
            android:layout_below="@id/tvAnimalName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <ScrollView
            android:id="@+id/scrllDescription"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:layout_below="@id/ivAnimal">
            <TextView
                android:id="@+id/tvAnimalDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem/random"/>
        </ScrollView>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgSexo"
            android:layout_below="@id/scrllDescription"
            android:layout_centerHorizontal="true">
            <RadioButton
                android:id="@+id/rbMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/macho"/>
            <RadioButton
                android:id="@+id/rbFem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hembra"/>
            <RadioButton
                android:id="@+id/rbSN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sin_asignar"/>
        </RadioGroup>
        <CheckBox
            android:id="@+id/animalSickness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasSickness"
            android:layout_below="@id/rgSexo"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:checked="false"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/animalSickness"
            android:layout_centerHorizontal="true">
            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginEnd="16dp"/>
            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>