<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividad_dos.fragments.AnimalDetailFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvAnimalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:textSize="25sp"
            tools:text="Animal Tag" />
        <ImageView
            android:id="@+id/ivAnimal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_img_placeholder"
            android:contentDescription="@string/img_not_found"
            android:layout_below="@+id/tvAnimalName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
        <CheckBox
            android:id="@+id/animalSickness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasSickness"
            android:layout_below="@+id/ivAnimal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:checked="false"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgSexo"
            android:layout_below="@+id/animalSickness"
            android:layout_centerHorizontal="true">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/macho"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hembra"/>
        </RadioGroup>
    </RelativeLayout>
</FrameLayout>